--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "clsx": "^2.1.0",
     "firebase": "^10.9.0",
     "firebase-admin": "^11.11.1",
-    "next": "14.1.3",
-    "next-auth": "^4.24.7",
+    "next": "^14.1.1",
+    "next-auth": "^5.0.0-beta.15",
     "next-i18n-router": "^5.3.1",
     "next-intl": "^3.9.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "tailwind-merge": "^2.2.1",
     "usehooks-ts": "^3.0.1"
   },
